# AndroidMethodHook

./: README.md
HookDemo/app/: CMakeLists.txt  build.gradle
HookDemo/app/src/main/: AndroidManifest.xml
HookDemo/app/src/main/cpp/: NativeHelper.cpp  mycast.cpp
HookDemo/app/src/main/java/com/android/dx/: DexMaker.java
HookDemo/app/src/main/java/com/lpl/hookdemo/: App.java  BootstrapClass.java  MainActivity.java  Reflection.java
HookDemo/app/src/main/java/com/panda/hook/javahook/: HookManager.java  HookUtil.java
HookDemo/app/src/main/res/layout/: activity_main.xml
HookDemo/gradle/wrapper/: gradle-wrapper.properties
